opam-version: "1.2"
name: "ReasonNativeProject"
version: "0.0.1"
maintainer: "Jordan Walke <jordojw@gmail.com>"
authors: [
  "Jordan Walke <jordojw@gmail.com>"
  "Maxwell Bernstein <max@bernsteinbear.com>"
]
license: "BSD"
homepage: "https://github.com/reasonml/ReasonNativeProject"
doc: "https://reasonml.github.io/ReasonNativeProject/"
bug-reports: "https://github.com/reasonml/ReasonNativeProject/issues"
dev-repo: "git://github.com/reasonml/ReasonNativeProject.git"
tags: [ "reason" "example" ]
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]
depends: [
  "core"  {= "v0.9.0"}
  "jbuilder" {build}
  "reason"  {= "3.0.0"}
  "yojson" {= "1.1.6"}
  "cohttp" {= "0.99.0"}
  "cohttp-lwt-unix" {= "0.99.0"}
  "lwt_ssl" {= "1.1.0"}
  "tls" {= "0.8.0"}
]
available: [ ocaml-version >= "4.02" & ocaml-version < "4.06" ]
